# aura

./: .gitignore  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: app.py  categorical.py  cleaning.py  feature_selection.py  model_training.py  splitting.py
backend/app/schemas/: categorical.py  cleaning.py  feature_selection.py  model_training.py  regression.py  splitting.py
backend/app/services/: categorical_service.py  cleaning_service.py  feature_selection_service.py  model_training_service.py  regression_service.py  splitting_service.py
frontend/: package.json
frontend/app/: globals.css  layout.tsx
frontend/app/landing/: page.tsx
frontend/app/landing/components/: categorical.tsx  cleaned-ver.tsx  data-table.tsx  feature-selection.tsx  header.tsx  import.tsx  (+2 more)
frontend/components/: alert-context.tsx  guide.txt  navbar.tsx  theme-provider.tsx  typography.tsx
frontend/components/ui/: alert.tsx  button.tsx  pagination.tsx
frontend/hooks/: guide.txt  use-model-training-preview.ts  useCategoricalEncoding.ts  useCleanedData.ts  useDatasetSplitting.ts  useFeatureSelection.ts  useFileImport.ts  useModelTraining.ts
frontend/layouts/: innerlayout.tsx
frontend/lib/: alert-utils.ts  guide.txt  import-utils.ts  model-training.ts  table-pagination.ts
frontend/services/: categorical.ts  data-cleaning.ts  feature-selection.ts  guide.txt  model-training.ts  splitting.ts
frontend/types/: alert.ts  categorical.ts  feature-selection.ts  guide.txt  import.ts  model-training.ts  splitting.ts
